RESOLVED FIXED78741
TileCache needs to support setting the contents scale
https://bugs.webkit.org/show_bug.cgi?id=78741
Summary TileCache needs to support setting the contents scale
Anders Carlsson
Reported 2012-02-15 14:10:59 PST
TileCache needs to support setting the contents scale
Attachments
Patch (4.19 KB, patch)
2012-02-15 14:12 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2012-02-15 14:12:41 PST
Anders Carlsson
Comment 2 2012-02-15 14:48:48 PST
WebKit Review Bot
Comment 3 2012-02-15 23:39:34 PST
Attachment 127234 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource From git://git.webkit.org/WebKit a21bbd6..8e285bc master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 107895 = a21bbd6f17aa576ecd1a66c7faa07f44e01c90de r107896 = 8e285bc85619935cedfcd1a66ad0e0f6bce9ccb5 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc M LayoutTests/ChangeLog M Source/WebCore/ChangeLog r107897 = 05fb97d0fc2d24b504eb2c45dda5211bb467c1b0 (refs/remotes/origin/master) First, rewinding head to replay your work on top of it... Applying: dataTransfer.types (HTML5 drag & drop) should return DOMStringList Using index info to reconstruct a base tree... <stdin>:84: trailing whitespace. <stdin>:333: trailing whitespace. <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" <stdin>:334: trailing whitespace. width="300" height="300" onload="runRepaintTest()"> <stdin>:335: trailing whitespace. <script xlink:href="../../fast/repaint/resources/repaint.js" /> <stdin>:336: trailing whitespace. <script><![CDATA[ warning: squelched 16 whitespace errors warning: 21 lines add whitespace errors. Falling back to patching base and 3-way merge... Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 dataTransfer.types (HTML5 drag & drop) should return DOMStringList When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
Note You need to log in before you can comment on or make changes to this bug.