TileCache needs to support setting the contents scale https://bugs.webkit.org/show_bug.cgi?id=78741 <rdar://problem/10710773>

Reviewed by Sam Weinig.

* platform/graphics/ca/mac/TileCache.h:
* platform/graphics/ca/mac/TileCache.mm:
(WebCore::TileCache::setContentsScale):
Update the contents scale of all the tiles and then revalidate the tile cache since tiles
might have come and gone as a result of setting the contents scale.

(WebCore::TileCache::createTileLayer):
Set the contents scale of the tile layer.

* platform/graphics/ca/mac/WebTileCacheLayer.mm:
(-[WebTileCacheLayer setContentsScale:]):
Call TileCache::setContentsScale.

Canonical link: https://commits.webkit.org/95683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107843 268f45cc-cd09-0410-ab3c-d52691b4dbfc